changed to placeholder

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
           <p class="about">Tell me your friend's name, I will go meet them!</p>
             <form action="">
           <fieldset>
-            <input type="text" name="twitter" value="@TwitterHandle"><br>
+            <input type="text" name="twitter" placeholder="@TwitterHandle"><br>
             <input type="submit" value="Submit">
           </fieldset>
         </form>
