--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="static/images/favicon.png">
+  <link rel="icon" type="image/png" href="static/img/favicon.ico">
 
 </head>
 <body>
