--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Skeleton: Responsive CSS Boilerplate</title>
+  <title>I am Belle</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -73,7 +73,16 @@
             
         <div class="one-half column value">
               <h2 class="friend">My latest friend!</h2>
-                <div id="tweet"></div>
+            <div class="tweet">
+                <a 
+                   class="twitter-timeline" 
+                   data-show-replies="true" 
+                   data-tweet-limit="1" 
+                   data-theme="light"
+                   
+                   data-chrome="nofooter noheader"
+ href="https://twitter.com/iambellebot">Tweets by iambellebot</a>
+                </div>
         </div>
       </div>
     </div>
@@ -86,6 +95,8 @@
       <a class="button button-primary" href="http://twitter.com/iambellebot">Come Visit Me!</a>
     </div>
   </div>
+    
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
     <script type="text/javascript">
@@ -105,9 +116,6 @@
     
             <!-- moment.js only needed for Query 6 example -->
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
-
-    <script type="text/javascript" src="static/scripts/twitterFetcher_min.js"></script>
-    <script type="text/javascript" src="static/scripts/exampleUsage.js"></script>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
