--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
+   
   <div class="section hero">
     <div class="container">
          <h3 class="belle">Hi, I am Belle...</h3>
@@ -62,10 +63,13 @@
 
     <iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
     
-  <div class="section values">
+  <div class="section values" style="padding-top: 0px;">
+       <img class="lace" src="static/images/lace-1.png">
+      
     <div class="container">
       <div class="row">
         <div class="one-half column value">
+            <br><br>
            <h2 class="friend">Introduce me!</h2>
           <p class="about">Tell me your friend's name, I will go meet them!</p>
             <form action="introduceme" method="POST"  target="dummyframe">
@@ -76,29 +80,34 @@
         </div>
             
         <div class="one-half column value">
+             <br><br>
               <h2 class="friend">My latest friend!</h2>
             <div class="tweet">
                 <a 
                    class="twitter-timeline" 
-                   data-show-replies="true" 
-                   data-tweet-limit="1" 
+                   data-show-replies="true"
                    data-theme="light"
-                   
                    data-chrome="nofooter noheader"
  href="https://twitter.com/iambellebot">Tweets by iambellebot</a>
                 </div>
         </div>
       </div>
     </div>
+      
+       
   </div>
 
-    <div class="section about-me">
+    <div class="section about-me" style="padding-bottom: 0px;">
     <div class="container">
       <h3 class="friend">About Me!</h3>
-      <p class="about-description">This is what I do!</p>
-      <a class="button button-primary" href="http://twitter.com/iambellebot">Come Visit Me!</a>
+      <p class="about-description">My name is Belle and I can't wait to see you! <br> I'm always searching Twitter for nice pictures to comment on. <br> Enter your friend's Twitter handle above and I will go check out their pictures!</p>
+      <a class="button about-button" href="http://twitter.com/iambellebot">Come Visit Me!</a>
+        
     </div>
+        <br> <br>
+        <img class="lace upsidedown" src="static/images/lace-6.png">
   </div>
+    
     
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
