--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-   
+
   <div class="section hero">
     <div class="container">
          <h3 class="belle">Hi, I am Belle...</h3>
@@ -62,10 +62,10 @@
   </div>
 
     <iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
-    
+
   <div class="section values" style="padding-top: 0px;">
        <img class="lace" src="static/images/lace-1.png">
-      
+
     <div class="container">
       <div class="row">
         <div class="one-half column value">
@@ -76,25 +76,26 @@
             <input type="text" name="name" placeholder="@TwitterHandle"><br>
               <button id="submit-button" type="submit" onclick="submitHandle()"> Go! </button>
                 </form>
-            <p class="about" id="hidden-submit"></p> 
+            <p class="about" id="hidden-submit"></p>
         </div>
-            
+
         <div class="one-half column value">
              <br><br>
               <h2 class="friend">My latest friend!</h2>
             <div class="tweet">
-                <a 
-                   class="twitter-timeline" 
+                <a
+                   class="twitter-timeline"
                    data-show-replies="true"
                    data-theme="light"
-                   data-chrome="nofooter noheader"
+                   data-chrome="nofooter noheader noscrollbar"
+                   data-height="300"
  href="https://twitter.com/iambellebot">Tweets by iambellebot</a>
                 </div>
         </div>
       </div>
     </div>
-      
-       
+
+
   </div>
 
     <div class="section about-me" style="padding-bottom: 0px;">
@@ -102,13 +103,13 @@
       <h3 class="friend">About Me!</h3>
       <p class="about-description">My name is Belle and I can't wait to see you! <br> I'm always searching Twitter for nice pictures to comment on. <br> Enter your friend's Twitter handle above and I will go check out their pictures!</p>
       <a class="button about-button" href="http://twitter.com/iambellebot">Come Visit Me!</a>
-        
+
     </div>
         <br> <br>
         <img class="lace upsidedown" src="static/images/lace-6.png">
   </div>
-    
-    
+
+
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
@@ -126,7 +127,7 @@
         document.getElementById("hidden-submit").innerHTML= "I'll go look for them!";
         }
 </script>
-    
+
             <!-- moment.js only needed for Query 6 example -->
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
 
